# StockSimplify

./: Dockerfile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt
app/: metrics.py  settings.py  urls.py  views.py
app/templates/: base.html  home.html
authentication/: urls.py
brands/: admin.py  forms.py  serializers.py  urls.py  views.py
brands/migrations/: 0001_initial.py
brands/templates/: brand_create.html  brand_delete.html  brand_detail.html  brand_list.html  brand_update.html
categories/: admin.py  forms.py  urls.py  views.py
categories/migrations/: 0001_initial.py
categories/templates/: category_create.html  category_delete.html  category_detail.html  category_list.html  category_update.html
docs/: index.md
inflows/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
inflows/migrations/: 0001_initial.py
inflows/templates/: inflow_create.html  inflow_detail.html  inflow_list.html
outflows/: admin.py  forms.py  serializers.py  signals.py  urls.py  views.py
outflows/migrations/: 0001_initial.py
outflows/templates/: outflow_create.html  outflow_detail.html  outflow_list.html
products/: admin.py  forms.py  models.py  urls.py  views.py
products/migrations/: 0001_initial.py
products/templates/: product_create.html  product_delete.html  product_detail.html  product_list.html  product_update.html
services/: notify.py
suppliers/: admin.py  forms.py  serializers.py  urls.py  views.py
suppliers/migrations/: 0001_initial.py
suppliers/templates/: supplier_create.html  (+4 more)
(+6 files in other folders)
