[project]
name = "Stock Simplify"
description = ""
authors = [
    {name = "Manoel Cândido",email = "manoelcandidodev@gmail.com"}
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
lint = 'ruff check'
lint_fix = 'ruff check --fix'
format = 'ruff format'
run = 'python3 manage.py runserver'
docs = 'mkdocs serve -a 0.0.0.0:8001'
create_user = 'python3 manage.py createsuperuser'